# Tetris-Unibo

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  main.cpp  run.sh
.devcontainer/: Dockerfile  devcontainer.json
docs/Attività/: Attività.md
docs/Relazione/: Relazione.md
include/: Board.hpp  Game.hpp  Mappa.hpp  Tetromino.h  Tetromino.hpp  Time.hpp  common_include.h  mappa.hpp
src/: Board.cpp  Game.cpp  Mappa.cpp  Tetromino.cpp  example.cpp  mappa.cpp
